# project-aegis

./: .env.example  .gitignore  HANDOFF.md  Makefile  README.md  apply_p1d7_patch.py  pyproject.toml  verify_changes.sh  verify_changes_final.sh
aegis/: __init__.py
config/: backtest.yaml  calendar.yaml  dashboard.yaml  decision_rules.yaml  experts.yaml  external_api_connectors.example.json  external_api_connectors.user-template.json  holdings.yaml  markets.yaml  paper_trading.yaml  paths.yaml  providers.yaml  universe.yaml  user_returned_evidence.user-template.json
dashboard/: index.html  index.html.backup  index.html.backup_p15  index.html.backup_p17  index.html.backup_p21_5d  index.html.backup_p22_7  index.html.backup_p22_7_pre_fix  v2.css  v2.js  v2_ui_spec.md
docs/: API_CONFIGURATION_HANDOFF.md  CLI_REFERENCE.md  Claude_Cowork_START_HERE.md  DAILY_REAL_SCENE_PILOT.md  DATA_AND_RECORDS.md  DEVELOPMENT_STATUS.md  EXTERNAL_MARKET_INTELLIGENCE_PLAN.md  HANDOFF.md  OPENCLAW_RUNBOOK.md  OPENCLAW_STOCK_AGENT_NEXT_TASK.md  P0_ACCEPTANCE_REPORT.md  P1A_PROVIDER_COVERAGE_DECISION.md  P1A_REAL_DATA_VALIDATION_RESULT.md  P1B1_PROVIDER_ROUTER_RESULT.md  P1B2_PROVIDER_ROUTER_LIVE_VALIDATION_RESULT.md  P1B3_PROVIDER_ROUTER_MARKET_DATA_RESULT.md  P1B4_HUS_MARKETSNAPSHOT_SMOKE_RESULT.md  P1B4_MARKETSNAPSHOT_SMOKE_CONSISTENCY_RESULT.md  P1B_HUS_CRCL_PROVIDER_IMPLEMENTATION_SPEC.md  P1C1_DESKTOP_POLISH_OPENCLAW_PREP_RESULT.md  P1C1_OPENCLAW_FEISHU_READONLY_SETUP.md  P1C2_OPENCLAW_FEISHU_READONLY_CONNECT_RESULT.md  P1C2_OPENCLAW_FEISHU_SETUP_RUNBOOK.md  P1_SCOPE_DECISION_BRIEF.md  (+119 more)
(+1313 files in other folders)
