[project]
name = "project-aegis"
version = "0.1.0"
description = "Project Aegis — single-user AI swing-trading decision support system (Phase 1: Data Pipeline)"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "pandas>=2.0",
  "tushare>=1.2",
  "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aegis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
